; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_cue.c_eat_char.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_cue.c_eat_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bstr = type { i8*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bstr*, i8)* @eat_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @eat_char(%struct.bstr* %0, i8 signext %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.bstr*, align 8
  %5 = alloca i8, align 1
  %6 = alloca %struct.bstr, align 8
  store %struct.bstr* %0, %struct.bstr** %4, align 8
  store i8 %1, i8* %5, align 1
  %7 = load %struct.bstr*, %struct.bstr** %4, align 8
  %8 = getelementptr inbounds %struct.bstr, %struct.bstr* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %37

11:                                               ; preds = %2
  %12 = load %struct.bstr*, %struct.bstr** %4, align 8
  %13 = getelementptr inbounds %struct.bstr, %struct.bstr* %12, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 0
  %16 = load i8, i8* %15, align 1
  %17 = sext i8 %16 to i32
  %18 = load i8, i8* %5, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp eq i32 %17, %19
  br i1 %20, label %21, label %37

21:                                               ; preds = %11
  %22 = load %struct.bstr*, %struct.bstr** %4, align 8
  %23 = load %struct.bstr*, %struct.bstr** %4, align 8
  %24 = bitcast %struct.bstr* %23 to { i8*, i64 }*
  %25 = getelementptr inbounds { i8*, i64 }, { i8*, i64 }* %24, i32 0, i32 0
  %26 = load i8*, i8** %25, align 8
  %27 = getelementptr inbounds { i8*, i64 }, { i8*, i64 }* %24, i32 0, i32 1
  %28 = load i64, i64* %27, align 8
  %29 = call { i8*, i64 } @bstr_cut(i8* %26, i64 %28, i32 1)
  %30 = bitcast %struct.bstr* %6 to { i8*, i64 }*
  %31 = getelementptr inbounds { i8*, i64 }, { i8*, i64 }* %30, i32 0, i32 0
  %32 = extractvalue { i8*, i64 } %29, 0
  store i8* %32, i8** %31, align 8
  %33 = getelementptr inbounds { i8*, i64 }, { i8*, i64 }* %30, i32 0, i32 1
  %34 = extractvalue { i8*, i64 } %29, 1
  store i64 %34, i64* %33, align 8
  %35 = bitcast %struct.bstr* %22 to i8*
  %36 = bitcast %struct.bstr* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %35, i8* align 8 %36, i64 16, i1 false)
  store i32 1, i32* %3, align 4
  br label %38

37:                                               ; preds = %11, %2
  store i32 0, i32* %3, align 4
  br label %38

38:                                               ; preds = %37, %21
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local { i8*, i64 } @bstr_cut(i8*, i64, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
